--- a/app/views/cloud_volume/backup_new.html.haml
+++ b/app/views/cloud_volume/backup_new.html.haml
@@ -62,5 +62,6 @@
 
 :javascript
   ManageIQ.angular.app.value('cloudVolumeFormId', '#{@volume.id}');
-  ManageIQ.angular.app.value('storageManagerId', #{@volume.ext_management_system.id});
+  ManageIQ.angular.app.value('storageManagerId', '#{@volume.ext_management_system.id.to_s}');
+  ManageIQ.angular.app.value('cloudVolumeFormOperation', 'BACKUP_NEW');
   miq_bootstrap(jQuery('#form_div'));
