--- a/app/views/cloud_volume/detach.html.haml
+++ b/app/views/cloud_volume/detach.html.haml
@@ -36,5 +36,6 @@
 
 :javascript
   ManageIQ.angular.app.value('cloudVolumeFormId', '#{@volume.id}');
-  ManageIQ.angular.app.value('storageManagerId', #{@volume.ext_management_system.id});
+  ManageIQ.angular.app.value('storageManagerId', '#{@volume.ext_management_system.id.to_s}');
+  ManageIQ.angular.app.value('cloudVolumeFormOperation', 'DETACH');
   miq_bootstrap('#form_div');
