Display custom button events for services
https://bugzilla.redhat.com/show_bug.cgi?id=1511126

--- a/app/views/service/show.html.haml
+++ b/app/views/service/show.html.haml
@@ -1,5 +1,5 @@
 #main_div
-  - if %w(generic_objects).include?(@display)
+  - if %w(generic_objects custom_button_events).include?(@display)
     - if @lastaction == 'generic_object' && @item
       = render :partial => 'layouts/textual_groups_generic'
     - else
