--- a/app/views/layouts/listnav/_ems_physical_infra.html.haml
+++ b/app/views/layouts/listnav/_ems_physical_infra.html.haml
@@ -15,6 +15,14 @@
     = miq_accordion_panel(_("Relationships"), false, "ems_rel") do
       %ul.nav.nav-pills.nav-stacked
         %li
+          = li_link(:count => @record.number_of(:physical_chassis),
+            :tables        => 'physical_chassis',
+            :record        => @record,
+            :display       => 'physical_chassis')
+          = li_link(:count => @record.number_of(:physical_racks),
+            :tables        => 'physical_racks',
+            :record        => @record,
+            :display       => 'physical_racks')
           = li_link(:count => @record.number_of(:physical_servers),
             :tables        => 'physical_servers',
             :record        => @record,
