--- a/app/assets/stylesheets/about_modal_background.scss
+++ b/app/assets/stylesheets/about_modal_background.scss
@@ -8,7 +8,7 @@
 }
 
 .about-modal-pf.whitelabel {
-  background-image: image-url($img-bg-login-whitelabel);
+ background-image: image-url($img-bg-login-whitelabel);
   background-size: 100% 100%;
 }
 
@@ -17,18 +17,18 @@
 }
 
 /* Track */
-.about-visible-scrollbar-track::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 10px #f5f5f5;
-  border-radius: 10px;
+.about-visible-scrollbar::-webkit-scrollbar-track {
+box-shadow: inset 0 0 10px #f5f5f5;
+border-radius: 10px;
 }
 
 /* Handle */
-.about-visible-scrollbar-thumb::-webkit-scrollbar-thumb {
-  background: #f5f5f5;
-  border-radius: 10px;
+.about-visible-scrollbar::-webkit-scrollbar-thumb {
+background: #f5f5f5;
+border-radius: 10px;
 }
 
 /* Handle on hover */
-.about-visible-scrollbar-hover::-webkit-scrollbar-thumb:hover {
-  background: #b305500;
+.about-visible-scrollbar::-webkit-scrollbar-thumb:hover {
+background: #b305500;
 }
