--- a/app/views/vm_common/_evacuate.html.haml
+++ b/app/views/vm_common/_evacuate.html.haml
@@ -1,28 +1,18 @@
 - message = n_("1 Instance to be Evacuated", "%{amount} Instances to be Evacuated", @evacuate_items.length) % {:amount => @evacuate_items.length}
 - form_id = @evacuate_items.length == 1 ? @evacuate_items[0].id : ''
 %vm-cloud-evacuate-form{'record-id' => form_id}
-%hr
-  %div
-    %h3
-      = message
-    - if @evacuate_items
-      - @embedded = true
-      - @quadicon_no_url = true
-      = render :partial => "layouts/gtl"
-- unless @explorer
-  %table{:width => '100%'}
-    %tr
-      %td{:align => 'right'}
-        #buttons_on
-          = button_tag(t = _('Submit'),
-            :class   => "btn btn-primary",
-            :alt     => t,
-            :title   => t,
-            :onclick => "miqAjaxButton('#{url_for_only_path(:action => "evacuate_vm", :button => "submit")}');")
-          = button_tag(t = _('Cancel'),
-            :class   => "btn btn-default",
-            :alt     => t,
-            :title   => t,
-            :onclick => "miqAjaxButton('#{url_for_only_path(:action => "evacuate_vm", :button => "cancel")}');")
+%div_for_paging{'ng-controller'                    => "pagingDivButtonGroupController",
+                'paging_div_buttons_state_enabled' => true,
+                'paging_div_buttons_id'            => "angular_paging_div_buttons",
+                'paging_div_buttons_type'          => "Submit"}
+  %hr
+    %div
+      %h3
+        = message
+      - if @evacuate_items
+        - @embedded = true
+        - @quadicon_no_url = true
+        = render :partial => "layouts/gtl"
 :javascript
   miq_bootstrap('vm-cloud-evacuate-form');
+  miq_bootstrap('div_for_paging');
