--- a/app/views/shared/buttons/_ab_options_form.html.haml
+++ b/app/views/shared/buttons/_ab_options_form.html.haml
@@ -81,14 +81,14 @@
       .col-md-8
         = select_tag("display_for",
                      options_for_select([[_('Single entity'), 'single'], [_('List'), 'list'], [_('Single and list'), 'both']], @edit[:new][:display_for]),
-                     "data-miq_sparkle_on" => true)
+                     "data-miq_sparkle_on" => true, :class => 'selectpicker')
     .form-group
       %label.control-label.col-md-2
         = _('Submit')
       .col-md-8
         = select_tag("submit_how",
                      options_for_select([[_('Submit all'), 'all'], [_('One by one'), 'one']], @edit[:new][:submit_how]),
-                     "data-miq_sparkle_on" => true)
+                     "data-miq_sparkle_on" => true, :class => 'selectpicker')
 :javascript
   miqInitSelectPicker();
   miqSelectPickerEvent('dialog_id', '#{url}');
